Use Button component for Responsive option

--- a/src/app/views/package/add.jade
+++ b/src/app/views/package/add.jade
@@ -106,16 +106,20 @@ block content
                                     | #{hr}
 
                 div.form-group
+                    label.control-label.col-lg-2 Responsive
+                    div.col-lg-10
+                        div.btn-group(data-toggle="buttons")
+                            label.btn.btn-default.active
+                                input(type="radio", name="responsive", value="1", checked)
+                                | Yes
+                            label.btn.btn-default
+                                input(type="radio", name="responsive", value="0")
+                                | No
+
+                div.form-group
                     label.control-label.col-lg-2 Year
                     div.col-lg-2
                         input.form-control(type="text", name="year", value="#{year}")
-
-                div.form-group
-                    div.col-lg-10.col-lg-offset-2
-                        div.checkbox
-                            label
-                                input(type="checkbox", name="responsive", value="1", checked)
-                                | Support responsive
 
                 div.form-group
                     label.control-label.col-lg-2 Thumbnail
