Fix 'chanelog' typo

--- a/src/app/views/package/add.jade
+++ b/src/app/views/package/add.jade
@@ -136,7 +136,7 @@ block content
                 input(name="uploaded_files", type="hidden")
 
             div#changelog.tab-pane
-                p Use the Markdown format for chanelog
+                p Use the Markdown format for changelog
                 ul.nav.nav-pills
                     li.active
                         a(href="#changelogContentTab", data-toggle="tab") Changelog
