Add .table-hover class to tables

--- a/src/app/views/account/dashboard.jade
+++ b/src/app/views/account/dashboard.jade
@@ -28,7 +28,7 @@ block content
                             div.panel-heading
                                 i.fa.fa-dollar
                                 |  Your subscriptions
-                            table.table
+                            table.table.table-hover
                                 thead
                                     tr
                                         th Title
@@ -52,7 +52,7 @@ block content
                             |  Recent downloads
                             a#refreshRecentDownloads(href="#")
                                 i.pull-right.fa.fa-refresh
-                        table.table
+                        table.table.table-hover
                             thead
                                 tr
                                     th File
@@ -74,7 +74,7 @@ block content
                             |  Latest packages
                             a#refreshLatestPackages(href="#")
                                 i.pull-right.fa.fa-refresh
-                        table.table
+                        table.table.table-hover
                             thead
                                 tr
                                     th Name
@@ -91,7 +91,7 @@ block content
                             |  Most downloaded packages
                             a#refreshDownloadedPackages(href="#")
                                 i.pull-right.fa.fa-refresh
-                        table.table
+                        table.table.table-hover
                             thead
                                 tr
                                     th Name
