--- a/src/app/views/dashboard/index.jade
+++ b/src/app/views/dashboard/index.jade
@@ -20,7 +20,7 @@ block content
                             | Recent downloads
                             a#refreshRecentDownloads(href="#")
                                 i.pull-right.fa.fa-refresh
-                        table.table
+                        table.table.table-hover
                             thead
                                 tr
                                     th File
