--- a/src/app/views/membership/index.jade
+++ b/src/app/views/membership/index.jade
@@ -4,7 +4,7 @@ block heading
     h1 Memberships
 
 block content
-    table.table
+    table.table.table-hover
         thead
             tr
                 th(style="width: 25%") Title
