--- a/src/app/views/user/index.jade
+++ b/src/app/views/user/index.jade
@@ -22,7 +22,7 @@ block content
                             button.btn.btn-info(type="submit")
                                 i.fa.fa-search
 
-        table.table(style="margin-top: 20px;")
+        table.table.table-hover(style="margin-top: 20px;")
             thead
                 tr
                     th Full name
