--- a/src/app/views/file/index.jade
+++ b/src/app/views/file/index.jade
@@ -26,7 +26,7 @@ block content
                             button.btn.btn-success(type="submit")
                                 i.fa.fa-search
 
-        table.table(style="margin-top: 20px;")
+        table.table.table-hover(style="margin-top: 20px;")
             thead
                 tr
                     th(style="width: 40%;")
