--- a/src/app/views/package/index.jade
+++ b/src/app/views/package/index.jade
@@ -5,8 +5,9 @@ block heading
         a(href="/admin/package") Packages
 
         if criteria.year
-            | &nbsp;/&nbsp;
-            a(href="/admin/package?year=#{criteria.year}") #{criteria.year}
+            small
+                |  &rarr;&nbsp;
+                a(href="/admin/package?year=#{criteria.year}") #{criteria.year}
 
         | &nbsp;
 
