--- a/src/app/views/layouts/account.jade
+++ b/src/app/views/layouts/account.jade
@@ -79,6 +79,16 @@ html
                 // Init tooltips
                 $('[data-toggle="tooltip"]').tooltip();
 
+                // Activate tab based on URL
+                var url = document.location.toString();
+                if (url.match('#')) {
+                    $('.nav-tabs a[href=#' + url.split('#')[1] + ']').tab('show');
+                }
+                // Change hash for page-reload
+                $('.nav-tabs a').on('shown.bs.tab', function(e) {
+                    window.location.hash = e.target.hash;
+                });
+
                 // Init account menu
                 $('#navbar')
                     .find('ul:not(.navbar-nav)')
